0.49 - fixed various issues that came up when cross-compiling
	fixed make uninstall to remove a few things that it missed
	fixed -pthread annoyance
	added -Werror to default build for most components
	fixed various issues revealed by -Werror
	added password encryption framework
	added rot password encryption plugin
	moved modules to libexec and removed the libsqlrelay_ prefix

0.48 - integrated patches from Neowiz for:
		handling for oracle errors ora-01033, ora-02067 and ora-04068
		bind validation when using the statement cache
		optionally rejecting oracle queries with duplicate
			bind variables
		sqlrconnecton::setClientInfo/getClientInfo
		query logging
		separate authentication and response timeouts on the client-side
		environment variables for setting timeouts
		sqlrelay-level errors for exceeding various bounds
		improved statistics gathering
	refactored Oracle re-prepare logic
	created a query logging framework
	implemented the current slow query log as a plugin
	implemented the neowiz query log format as a plugin
	created a custom query framework
	implemented the neowiz statistics gathering commands as custom queries
	added a test program for triggers, translations and other extensions
		and obscure features
	fixed several bugs in the informixtooracledates translation
	added a droplocalizedtemptables trigger
	added support for "global temporary" to temptableslocalize translation
	removed oracletemptablespreserverowsbydefault translation -
		temptableslocalize is much more effective
	fixed a bug that caused a "no server-side cursors" error to occur if
		when a new session is started if cursors="0" in sqlrelay.conf
	the client no longer aborts a result set before sending a new command,
		it just sends the new command, eliminating a client/server
		round-trip
	replaced sqlr-connection-"dbase" with a single sqlr-connection program
		that loads plugins for each database

0.47 - fixed bug that caused sqlr-export to output negative xml-entity values